--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_application_1
+name: wang_hann_exhibition
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -38,6 +38,9 @@ dependencies:
   google_fonts: ^6.1.0
   gap: ^3.0.1
   flutter_svg: ^2.0.9
+  cached_network_image: ^3.3.0
+  themed: ^5.0.0
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +66,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/icons/social_media/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
