--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cached_network_image: ^3.3.0
   themed: ^5.0.0
   url_strategy: ^0.2.0
+  video_player: ^2.8.1
+  video_player_web: ^2.1.2
 
 dev_dependencies:
   flutter_test:
